--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: 喻德元
+title: 武当第二十代道医传人喻德元
 # Website name
 baseURL: 'https://gupu0708.github.io/' # Website URL
 
